--- a/beta/index.html
+++ b/beta/index.html
@@ -491,7 +491,7 @@
             </ul>
         </nav>
         <!--end of context menu -->
-        <div id="settings">
+        <div id="settings" style='top: 0; background-color: white;'>
         <h1 id='settings-uname'>
         </h1>
         <div id="settings-back-arrow" onclick="backSettings()">
