--- a/beta/index.html
+++ b/beta/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="other resources/photos.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/cmenu.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/tiri.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="other resources/settings.css" crossorigin="anonymous">
     <link rel="icon" href="other resources/favicon.ico">
     <title>TiMedia</title>
 </head>
@@ -540,6 +541,12 @@
             </ul>
         </nav>
         <!--end of context menu -->
+        <div id="settings" style='top: 0; display: none; background-color: white;'> 
+        <h3 id='settings-uname'> </h3> <div id="settings-back-arrow" onclick="backSettings()"> 
+        </div> 
+        <br><br> 
+        <div id="settings-sections"> 
+        </div>
         <script src="js/birthday.js"></script>
         <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
         <script src="js/aes.js"></script>
