--- a/beta/index.html
+++ b/beta/index.html
@@ -486,8 +486,10 @@
         <!--end of context menu -->
         <div id="settings" style='top: 0; display: none; background-color: white;'>
         <span style="top: 0; float: right;" onclick='closeSettings()' class="glyphicon glyphicon-remove"></span>
-        <h3 id='settings-uname'> </h3> <div id="settings-back-arrow" onclick="backSettings()">
+        <h3 id='settings-uname'></h3>         
         <a href="logout.html">Logout <span class="glyphicon glyphicon-log-out"></span></a>
+        <div id="settings-back-arrow" onclick="backSettings()">
+        <
         </div> 
         <br><br> 
         <div id="settings-sections"> 
