--- a/beta/index.html
+++ b/beta/index.html
@@ -484,7 +484,7 @@
             </ul>
         </nav>
         <!--end of context menu -->
-        <div id="settings" style='top: 0; opacity: 0; z-index: -1000000000000000000;  background-color: white;'>
+        <div id="settings" style='top: 0; display: none; background-color: white;'>
         <span style="top: 0; float: right;" onclick='closeSettings()' class="glyphicon glyphicon-remove"></span>
         <h3 id='settings-uname'></h3>         
         <a href="logout.html">Logout <span class="glyphicon glyphicon-log-out"></span></a>
