--- a/beta/index.html
+++ b/beta/index.html
@@ -494,6 +494,7 @@
         <br><br> 
         <div id="settings-sections"> 
         </div>
+        <script src="js/titanium.js"></script>
         <script src="js/birthday.js"></script>
         <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
         <script src="js/aes.js"></script>
