--- a/beta/titanium/index.html
+++ b/beta/titanium/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>TiTanium</title>
 	<link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="../other resources/style.css"
+        <link rel="stylesheet" href="../other resources/style.css">
 </head>
 <body>
 <div id="setupWindow" class="container" align="center">
