--- a/beta/titanium/index.html
+++ b/beta/titanium/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="setupWindow" class="container" align="center">
-  <img id="icon" src="B8DA605B-A1BE-4B2B-A0A6-306C56C26E03.png" width="90px" height="90px" draggable="false"><br><br>
+  <img id="icon" src="icon.png" width="90px" height="90px" draggable="false"><br><br>
   <div id="setupText">
     <h3>Welcome to TiTanium</h3><br> The browser faster than Chrome.<br><br>
     
