--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <span onclick="toggleSettings()" class="glyphicon glyphicon-cog btn btn-primary" title="Settings"></span>
       </div>
       <div id="bookmarks"><br></div>
+      <div id='httpSite' style='background-color: red; padding: 10px; border-radius: 2px;'>
+      This website is secured using HTTP. Please contact the owner of this website and advise them to upgrade to the higher-security HTTPS standard.
+      </div>
       <div id="webframes">
         <webview id="tab0"></webview>
       </div>
