--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <span onclick="toggleSettings()" class="glyphicon glyphicon-cog btn btn-primary" title="Settings"></span>
       </div>
       <div id="bookmarks"><br></div>
-      <div id='httpSite' style='background-color: red; padding: 10px; border-radius: 2px;'>
+      <div id='httpSite' style='background-color: red; padding: 10px; border-radius: 2px; display: none;'>
       This website is secured using HTTP. Please contact the owner of this website and advise them to upgrade to the higher-security HTTPS standard.
       </div>
       <div id="webframes">
