Need to fix this later

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h4>History</h4>
         <button class="btn btn-danger" onclick="clearHistory()">Clear History</button>
         <h4>Bookmarks</h4>
-        <button class="btn btn-primary" onclick="exportBookmarks()">Export Bookmarks (.tbf)</button><br><br>
+        <!--<button class="btn btn-primary" onclick="exportBookmarks()">Export Bookmarks (.tbf)</button><br><br>-->
         <button class="btn btn-danger" onclick="clearBookmarks()">Clear Bookmarks</button>
       </div>
     </div>
