--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span onclick="addBookmark()" class="glyphicon glyphicon-star btn btn-primary" title="Bookmark"></span>
         <span onclick="incognitoMode()" class="glyphicon glyphicon-eye-close btn btn-primary" title="Incognito"></span>
         <span onclick="toggleSettings()" class="glyphicon glyphicon-cog btn btn-primary" title="Settings"></span>
-        <span onclick="toggleLogin();" class="glyphicon glyphicon-user btn btn-primary" title="Settings"></span><br>
+        <span onclick="toggleLogin();" class="glyphicon glyphicon-user btn btn-primary" title="Login"></span><br>
       </div>
       <div id="bookmarks"><br></div>
       <div id='httpSite' style='background-color: red; padding: 10px; border-radius: 2px; display: none;'>
@@ -51,6 +51,7 @@
       	<h4> Sign in to TiTanium </h4>
       	<input id='uname' class='form-control' placeholder="Username">
       	<input id='pword' class='form-control' type='password' placeholder="Password" onchange='signin()'>
+	<button onclick='signin();' class='btn btn-primary'>Login</button>
       </div>
       <div id="settings" class="container" style="display: none;">
         <h2>Settings</h2>
@@ -61,11 +62,11 @@
         Homepage<br>
         <input type="url" id="homepageInput" class="form-control" oninput="setHomepage(this.value)"><br> Search Engine<br>
         <select id="searchEngineInput" class="form-control" oninput="setSearchEngine(this.value)">
-					<option value="0">Google</option>
-					<option value="1">Bing</option>
-					<option value="2">Yahoo!</option>
-					<option value="3">DuckDuckGo</option>
-				</select>
+	<option value="0">Google</option>
+	<option value="1">Bing</option>
+	<option value="2">Yahoo!</option>
+	<option value="3">DuckDuckGo</option>
+        </select>
         <h4>History</h4>
         <button class="btn btn-danger" onclick="clearHistory()">Clear History</button>
         <h4>Bookmarks</h4>
