Stage one sign out btn

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <h4>About</h4>
         <h6>TiTanium Alpha 5.6</h6>
         <span> Account: </span><span id='user'>Not Logged In</span>
+	<button id='signout' onclick='signout()' style='display: none' class='btn btn-primary'>Sign out</button>
         <h4>General</h4>
         Homepage<br>
         <input type="url" id="homepageInput" class="form-control" oninput="setHomepage(this.value)"><br> Search Engine<br>
