--- a/beta/index.html
+++ b/beta/index.html
@@ -141,7 +141,8 @@
             <button id="tibookmarks-edit" style="display: none;" onclick="editBookmark()" class="btn btn-primary">Edit</button>
             <button id="tibookmarks-open" style="display: none;" onclick="openBookmark()" class="btn btn-primary">Open Bookmark</button>
         </div>
-
+        <div style='display: none;' id='newapp-application-view'>
+        </div>
         <div style="display: none;" id="newapp">
             <h3>New App</h3>
             <br>
