--- a/beta/index.html
+++ b/beta/index.html
@@ -146,6 +146,9 @@
         <div style="display: none;" id="newapp">
             <h3>New App</h3>
             <br>
+            <h5> Execute .TIAPP file </h5>
+            <button onclick='uploadApp()'>Open Application</button>
+            <h5> Create App </h5>
             <input id="newapp-name" class="form-control" placeholder="App Name">
             <br>
 
