--- a/beta/index.html
+++ b/beta/index.html
@@ -156,7 +156,8 @@
             <p id="newapp-preview">Preview: </p>
             <br>
 
-            <textarea id="newapp-source" class="form-control" placeholder="App Source (HTML)"></textarea>
+            <textarea id="newapp-source" class="form-control" placeholder="App Source (HTML - CSS)"></textarea>
+            <textarea id='newapp-source-js' class="form-control" placholder="App Source (JS)"></textarea>
             <br>
 
             <button class="btn btn-primary" onclick="submitApp()">Create App</button>
