--- a/beta/index.html
+++ b/beta/index.html
@@ -157,7 +157,7 @@
             <br>
 
             <textarea id="newapp-source" class="form-control" placeholder="App Source (HTML - CSS)"></textarea>
-            <textarea id='newapp-source-js' class="form-control" placholder="App Source (JS)"></textarea>
+            <textarea id='newapp-source-js' class="form-control" placeholder="App Source (JS)"></textarea>
             <br>
 
             <button class="btn btn-primary" onclick="submitApp()">Create App</button>
