--- a/beta/index.html
+++ b/beta/index.html
@@ -153,7 +153,7 @@
             <br>
 
             <input id="newapp-icon" onkeyup="updateIcon()" class="form-control" placeholder="App Icon (GlyphIcon)">
-            <p id="newapp-preview">Preview: </p>
+            <p id="newapp-preview">Icon Preview: </p>
             <br>
 
             <textarea id="newapp-source" class="form-control" placeholder="App Source (HTML - CSS)"></textarea>
